update map layers

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,1 +1,7 @@
-<p>map works!</p>
+<div class="map-container"
+     leaflet 
+     [leafletOptions]="options"
+     [leafletLayersControl]="layersControl"
+     (leafletMapReady)="onMapReady($event)"
+     (leafletMapZoomEnd)="onMapZoomEnd($event)">
+</div>
