Added HUC layer retrieval from USGS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-navigation></app-navigation>
-<h1>HMS</h1>
-<app-map></app-map>
+<h1>HMS: Hydrological Micro Services</h1>
+<div class="container">
+    <app-navigation></app-navigation>
+    <app-map></app-map>
+</div>
 <router-outlet></router-outlet>
