restructured page, created header component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,32 @@
 .container {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-areas: 
+        "header",
+        "navigation",
+        "content",
+        "footer";
+}
+
+.header,
+.footer,
+.navigation {
+    background: #0e6993;
+    text-align: center;
+    height: 10vh;
+}
+
+.header {
+    grid-area: "header";
+}
+
+.navigation {
+    grid-area: "navigation";
+}
+
+.content {
+    grid-area: "content";
+}
+
+.footer {
+    grid-area: "footer";
 }
