--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,6 +1,4 @@
-.map-container {
-    display: block;
-    position: absolute;
-    width: 80%;
-    height: 80%;
+#map {
+    height: 70vh;
+    width: 100%;
 }
