--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<h1>HMS: Hydrological Micro Services</h1>
+
 <div class="container">
-    <app-navigation></app-navigation>
-    <app-map></app-map>
+    <app-header class="header"></app-header>
+    <app-navigation class="navigation"></app-navigation>
+    <router-outlet class="content"></router-outlet>
+    <app-footer class="footer"></app-footer>
 </div>
-<router-outlet></router-outlet>
