--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,4 @@
-<div class="contetnt">
+<div class="content">
     <img src="../../../assets/images/epa_logo_281.png" />
+    <span id="name"><span class="big">H.M.S.</span>Hydrolocical Micro Services</span>
 </div>
