--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,5 @@ body {
     padding: 0px;
     height: 100%;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
