--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -4,7 +4,7 @@
         <td>
           <mat-form-field appearance="outline">
             <mat-label>Select a Module: </mat-label>
-            <mat-select [(ngModel)]="selectedModule" name="modules" formControlName="module">
+            <mat-select formControlName="module">
               <mat-option *ngFor="let module of modules" [value]="module.value">
                 {{module.viewValue}}
               </mat-option>
@@ -14,7 +14,7 @@
         <td>
           <mat-form-field appearance="outline">
             <mat-label>Area of Interest: </mat-label>
-            <mat-select [(ngModel)]="selectedAoI" name="interestArea" formControlName="aoI">
+            <mat-select formControlName="aoI">
               <mat-option *ngFor="let interestArea of interestAreas" [value]="interestArea.value">
                 {{interestArea.viewValue}}
               </mat-option>
@@ -60,7 +60,7 @@
         <td>
           <mat-form-field appearance="outline">
             <mat-label>Source: </mat-label>
-            <mat-select [(ngModel)]="selectedSource" formControlName="source">
+            <mat-select formControlName="source">
               <mat-option *ngFor="let source of sources" [value]="source.value">
                 {{source.viewValue}}
               </mat-option>
@@ -81,7 +81,7 @@
         <td>
           <mat-form-field appearance="outline">
             <mat-label>Time Zone: </mat-label>
-            <mat-select [(ngModel)]="selectedTimeZone" formControlName="timeZone">
+            <mat-select formControlName="timeZone">
               <mat-option *ngFor="let timeZone of timeZones" [value]="timeZone.value">
                 {{timeZone.viewValue}}
               </mat-option>
@@ -102,7 +102,7 @@
         <td>
           <mat-form-field appearance="outline">
             <mat-label>Output Data Format: </mat-label>
-            <mat-select [(ngModel)]="selectedDataFormat" formControlName="outputFormat">
+            <mat-select formControlName="outputFormat">
               <mat-option *ngFor="let outputDataFormat of outputDataFormats" [value]="outputDataFormat.value">
                 {{outputDataFormat.viewValue}}
               </mat-option>
@@ -112,7 +112,7 @@
         <td>
           <mat-form-field appearance="outline">
             <mat-label>Temporal Resolution: </mat-label>
-            <mat-select [(ngModel)]="selectedResolution" formControlName="temporalResolution">
+              <mat-select formControlName="temporalResolution">
               <mat-option *ngFor="let temporalResolution of temporalResolutions" [value]="temporalResolution.value">
                 {{temporalResolution.viewValue}}
               </mat-option>
@@ -125,14 +125,11 @@
     <table class="input-form-table" cellspacing="0">
       <tr>
         <td>
-          <button mat-raised-button color="primary">Build Parameters</button>
+          <button mat-raised-button color="primary" (click)="getValues()">Build Parameters</button> 
         </td>
         <td>
-          <cdk-virtual-scroll-viewport itemSize="50" class="parameter-viewport">
-            <div *cdkVirtualFor="let item of items" class="parameter-item">{{item}}</div>
-          </cdk-virtual-scroll-viewport>
+          <textarea formControlName="output" cols="40" rows="8"></textarea>
         </td>
       </tr>
     </table>
   </form>
-  
