--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,1 +1,2 @@
-<button (click)="inputFormClick()">Click Me!</button>
+<button mat-raised-button (click)="gotoMap()">Map</button>
+<button mat-raised-button (click)="gotoInput()">Input Form</button>
