--- a/src/app/components/input/input.component.css
+++ b/src/app/components/input/input.component.css
@@ -1,23 +1,39 @@
 .input-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .input-form-table {
-    width: 100%;
-  }
-  
-  td {
-    padding-right: 8px;
-  }
+  width: 36fr;
+  min-width: 420px;
+  display: grid;
+  padding-top: 1.5rem;
+  background-color: lightsteelblue;
+  height: 100%;
+}
 
-.parameter-viewport {
-  height: 200px;
-  width: 200px;
+.panel-row, 
+.calendar-row,
+.output-row {
+  display: grid;
+  max-width: 100%;
+  place-items: center;
+  height: 5rem;
+}
+
+.panel-row {
+  grid-template-columns: 1fr 1fr;
+}
+
+.output-row {
+  grid-template-columns: 1fr 3fr;
+  margin-bottom: 3rem;
+}
+
+.submit-button {
+  display: grid;
+  place-items: center;
+}
+
+.text-area {
   border: 1px solid black;
 }
 
-.parameter-item {
-  height: 50px;
+.outline {
+  border: 1px solid blue;
 }
