--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,1 +1,4 @@
-<div id="map"></div>
+<div class="grid-container">
+    <app-input class="form-container"></app-input>
+    <div class="map-container" id="map"></div>
+</div>
