--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,4 +1,1 @@
-<div class="grid-container">
-    <app-input class="form-container"></app-input>
-    <div class="map-container" id="map"></div>
-</div>
+<div id="map"></div>
