--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,13 +1,4 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(100, 1fr);
-    gap: 0px;
-}
-
-.form-container {
-    grid-column: 1/36;
-}
-
-.map-container {
-    grid-column: 36/102;
+#map {
+    width: 100%;
+    height: 100%;
 }
