--- a/src/app/components/input/input.component.css
+++ b/src/app/components/input/input.component.css
@@ -9,6 +9,14 @@
   height: 3rem;
 }
 
+.margin-top {
+  margin-top: 1rem;
+}
+
+.margin-bottom {
+  margin-bottom: 1rem;
+}
+
 .panel, 
 .calendar,
 .output {
@@ -21,15 +29,12 @@
   grid-template-columns: 1fr 1fr;
 }
 
-.output {
-  margin-bottom: 2rem;
-}
-
-.submit-button {
-  display: grid;
-  place-items: center;
-}
-
 .text-area {
   background-color: lightgoldenrodyellow;
+  border: 1pd solid lightgray;
+  border-radius: 5px;
+}
+
+mat-form-field {
+  width: 90%;
 }
