--- a/src/app/components/input/input.component.css
+++ b/src/app/components/input/input.component.css
@@ -6,22 +6,17 @@
 
 .row {
   width: 100%;
-  height: 3rem;
 }
 
 .margin-top {
   margin-top: 1rem;
 }
 
-.margin-bottom {
-  margin-bottom: 1rem;
-}
-
 .panel, 
 .calendar,
+.button,
 .output {
   display: grid;
-  max-width: 100%;
   place-items: center;
 }
 
@@ -32,10 +27,18 @@
 .text-area {
   color: lime;
   background-color: rgb(44, 44, 44);
-  border: 1pd solid rgb(150, 150, 150);
-  border-radius: 5px;
 }
 
 mat-form-field {
   width: 90%;
+}
+
+mat-form-field.mat-form-field {
+  font-size: 12px;
+  height: 1rem;
+  padding-bottom: 2rem;
+}
+
+button {
+  border-radius: 0px;
 }
