added map.flyTo function and more layers

--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -95,7 +95,7 @@
   </div>
 
   <div class="output row">
-    <textarea class="text-area" 
+    <textarea class="text-area" id="output"
             matInput
             cdkTextareaAutosize
             #autosize="cdkTextareaAutosize"
