--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -11,7 +11,7 @@
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Area of Interest: </mat-label>
-      <mat-select formControlName="aoI">
+      <mat-select formControlName="AoI">
         <mat-option *ngFor="let interestArea of interestAreas" [value]="interestArea.value">
           {{interestArea.viewValue}}
         </mat-option>
