--- a/src/app/components/map/map-control/map-control.component.html
+++ b/src/app/components/map/map-control/map-control.component.html
@@ -1,19 +1,19 @@
 <div class="grid-container">
     <div class="item">
-        <div *ngFor="let map of basemaps" class="button" [class.active]=map.show (click)="controlClick(map)" readonly>
+        <div *ngFor="let map of basemaps" class="button" [class.active]=map.show (click)="issueCommand('toggle', map)" readonly>
             {{ map.name }}
         </div>      
     </div>
     
     <div class="item">
-        <div *ngFor="let feature of features" class="button" [class.active]=feature.show (click)="controlClick(feature)" readonly>
+        <div *ngFor="let feature of features" class="button" [class.active]=feature.show (click)="issueCommand('toggle', feature)" readonly>
             {{ feature.name }}
         </div>
     </div>
     
     <div class="item">
-        <div class="button" (click)="controlClick('refresh')">
-            Refresh Map Layers
+        <div class="button" (click)="issueCommand('refresh')">
+            Update Layer Info
         </div>
     </div>
 </div>
