--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,7 +1,7 @@
 body {
     display: grid;
     grid-template: auto 1fr auto / auto 1fr auto;
-    background: #0e6993;
+    background-color: lightgray;
     font-family: Roboto, "Helvetica Neue", sans-serif;
     height: 100vh;
 }
@@ -11,7 +11,6 @@ app-header {
 }
 
 app-map {
-    background: rgb(186, 248, 245);
     grid-column: 2 / 3;
 }
 
