meteorology modules are now shown

--- a/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
+++ b/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
@@ -10,6 +10,9 @@
         <ng-container *ngIf="activePanel == 'about'">
             <app-about></app-about>
         </ng-container>
+        <ng-container *ngIf="activePanel == 'meteorology'">
+            <app-input></app-input>
+        </ng-container>
         <ng-container *ngIf="activePanel == 'hydrology'">
             <app-input></app-input>
         </ng-container>
